# simple_cl

./: CMakeLists.txt  LICENSE
cmake/: include_cl_kernel.cmake  package_helpers.cmake
documentation/: simple_cl.doxyfile
include/: simple_cl.hpp  simple_cl_error.hpp
src/: simple_cl.cpp  simple_cl_error.cpp
